Fixed footer on mobile

--- a/style.css
+++ b/style.css
@@ -294,7 +294,7 @@ p {
   padding: 5px 5px;
   width: 100%;
   margin-top: 40px;
-  z-index: 10;
+  z-index: 100;
 }
 
 .footer-container {
